<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="group7.tcss450.uw.edu.parkinglotreservation.AddUserActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_emp_text"
        android:textSize="@dimen/font_size_large"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/emp_first_name_hint"
            android:ems="10"
            android:id="@+id/emp_first_name"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/emp_last_name_hint"
            android:ems="10"
            android:id="@+id/emp_last_name"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/address_hint"
            android:ems="10"
            android:id="@+id/address"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/ssn_hint"
            android:ems="10"
            android:id="@+id/ssn_edit"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/license_hint"
            android:ems="10"
            android:id="@+id/license"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <Button
            android:text="@string/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_emp_button"
            android:textSize="@dimen/font_size"/>

    </LinearLayout>

</LinearLayout>
