<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group7.tcss450.uw.edu.parkinglotreservation.MainFragment"
    android:gravity="center"
    android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_lot"
            android:text="@string/add_lot"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"
            android:id="@+id/spacer_1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_space"
            android:text="@string/add_space"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"
            android:id="@+id/spacer_2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_emp"
            android:text="@string/add_emp"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"
            android:id="@+id/spacer_3"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/update_employee"
            android:text="@string/update_employee"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>


        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"
            android:id="@+id/spacer_4"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/assign_space"
            android:text="@string/assign_space"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>


        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"
            android:id="@+id/spacer_5"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reserve_space"
            android:text="@string/reserve_space"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

</LinearLayout>
