<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_lot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group7.tcss450.uw.edu.parkinglotreservation.MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_lot_text"
        android:textSize="@dimen/font_size_large"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lot_hint"
            android:ems="10"
            android:id="@+id/lot_name_text"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/loc_hint"
            android:ems="10"
            android:id="@+id/lot_loc_text"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/cap_hint"
            android:ems="10"
            android:id="@+id/lot_cap_text"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/num_floors_hint"
            android:ems="10"
            android:id="@+id/lot_numfloors_text"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <Button
            android:text="@string/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_lot_button"
            android:textSize="@dimen/font_size"/>

    </LinearLayout>

</LinearLayout>
