<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group7.tcss450.uw.edu.parkinglotreservation.MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reserve_visitor_text"
        android:textSize="@dimen/font_size_large"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reserve_employee_text"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/visitor_employee_spinner"
            android:background="@drawable/customborder"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reserve_space_text"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/visitor_space_spinner"
            android:background="@drawable/customborder"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/visitor_license_hint"
            android:id="@+id/vis_license_edit"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/visitor_date_hint"
            android:id="@+id/visitor_date_edit"
            android:background="@drawable/customborder"
            android:textSize="@dimen/font_size"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_size"/>

        <Button
            android:text="@string/visitor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reserve_space_button"
            android:textSize="@dimen/font_size"/>

    </LinearLayout>

</LinearLayout>